--- a/widgets/file-explorer/navigation/widget.css
+++ b/widgets/file-explorer/navigation/widget.css
@@ -1,7 +1,6 @@
 /*  
     Copyright 2022 HolyCorn Software
-    The CAYOFED People System
-    The zonation-manager navigation widget
+    The file-manager widget
 
     This stylesheet gives beauty to the navigation widget
 */
