--- a/widgets/hierarchy-input/popup.css
+++ b/widgets/hierarchy-input/popup.css
@@ -1,7 +1,7 @@
 /*  
     Copyright 2022 HolyCorn Software
-    The CAYOFED People System
-    This stylesheet determines to some extent... The looks of the zone-input popup
+    The hierarychy-input widget
+    This stylesheet determines to some extent... The looks of the hierarychy-input popup
 */
 
 .hc-hierarchy-input-popup-content {
