--- a/widgets/branded-popup/popup.css
+++ b/widgets/branded-popup/popup.css
@@ -5,42 +5,45 @@ By combining The HCTSBrandedMenu and Popup, it makes it easier to show consisten
 */
 
 
-.hc-hcts-branded-popup > .container{
+.hc-hcts-branded-popup>.container {
     /* background-color:white; */
-    overflow-y:hidden;
-    min-height:70vh;
-    --max-height:calc(100vh - 2em);
-    display:grid;
-    place-items:center;
+    overflow-y: hidden;
+    min-height: 70vh;
+    --max-height: calc(100vh - 2em);
+    display: grid;
+    place-items: center;
 }
 
 
-.hc-v2-choose-popup.hc-hcts-branded-popup >.container >.wrapper >.data{
-    background-color:transparent;
+.hc-v2-choose-popup.hc-hcts-branded-popup>.container>.wrapper>.data {
+    background-color: transparent;
 }
 
 
-.hc-hcts-branded-popup .hc-hcts-branded-menu >.container{
-    background-color:rgba(255, 255, 255, 0.95);
+.hc-hcts-branded-popup .hc-hcts-branded-menu>.container {
+    background-color: rgba(255, 255, 255, 0.95);
 }
 
-.hc-hcts-branded-popup .hc-hcts-branded-menu >.container >.main-row{
-    overflow-y:auto;
+.hc-hcts-branded-popup .hc-hcts-branded-menu>.container>.main-row {
+    overflow-y: auto;
 }
 
-.hc-hcts-branded-popup .hc-hcts-branded-menu >.container >.main-row::-webkit-scrollbar{
+.hc-hcts-branded-popup .hc-hcts-branded-menu>.container>.main-row::-webkit-scrollbar,
+.hc-branded-popup-blue-scrollbar::-webkit-scrollbar {
     background: transparent;
 
 }
 
-.hc-hcts-branded-popup .hc-hcts-branded-menu >.container >.main-row::-webkit-scrollbar-button{
-    background:transparent;
+.hc-hcts-branded-popup .hc-hcts-branded-menu>.container>.main-row::-webkit-scrollbar-button,
+.hc-branded-popup-blue-scrollbar::-webkit-scrollbar-button {
+    background: transparent;
 }
 
-.hc-hcts-branded-popup .hc-hcts-branded-menu >.container >.main-row::-webkit-scrollbar-thumb{
+.hc-hcts-branded-popup .hc-hcts-branded-menu>.container>.main-row::-webkit-scrollbar-thumb,
+.hc-branded-popup-blue-scrollbar::-webkit-scrollbar-thumb {
     /* border-right:8px solid rgb(17, 98, 211); */
-    background:rgba(0, 0, 255, 0.542);
-    border-radius:10px;
-    border:4px solid white;
+    background: rgba(0, 0, 255, 0.542);
+    border-radius: 10px;
+    border: 4px solid white;
 
 }
