--- a/widgets/list-popup/widget.css
+++ b/widgets/list-popup/widget.css
@@ -32,7 +32,7 @@
 
 .hc-list-popup-content >.container >.top >.title{
     font-size:1.75em;
-    font-family:vanilla_caramel;
+    font-family:k2dExtraBold;
 }
 
 .hc-list-popup-content >.container >.options{
