--- a/widgets/fileUpload/upload.css
+++ b/widgets/fileUpload/upload.css
@@ -79,7 +79,8 @@ This widget allows users to upload files, especially images to the unique file u
     opacity:0;
     pointer-events:none;
     max-width:0px;
-    position:absolute;
+    transform: scale(0);
+    transition:0.75s 0.125s;
 }
 
 .hc-uniqueFileUpload >.container >.actions .hc-action-button >.container{
@@ -94,8 +95,8 @@ This widget allows users to upload files, especially images to the unique file u
     opacity:1;
     pointer-events:all;
     max-width:300px;
-    transition:0.25s 0.125s;
     position:relative;
+    transform: scale(1);
 }
 
 
