--- a/lib/widget/widget.css
+++ b/lib/widget/widget.css
@@ -8,3 +8,9 @@ Just some basic rules that every widget has to follow
     
     position:relative;
 }
+
+.hc-widget.hc-animations-frozen *{
+    transition:0s 0s;
+    animation-delay: 0s;
+    animation-duration: 0s;
+}
