--- a/widgets/fileUpload/upload.css
+++ b/widgets/fileUpload/upload.css
@@ -29,6 +29,7 @@ This widget allows users to upload files, especially images to the unique file u
     flex-grow: 1;
     max-width: 100%;
     z-index: 1;
+    justify-content: space-between;
 }
 
 .hc-uniqueFileUpload>.container>.main>.label {
