--- a/widgets/back-forth/widget.css
+++ b/widgets/back-forth/widget.css
@@ -20,6 +20,7 @@
     font-size: 0em;
     opacity: 0;
     pointer-events: none;
+    padding: 0.5em;
 }
 
 .hc-back-forth>.container>.nav>.title {
