--- a/widgets/dual-pane-expander/widget.css
+++ b/widgets/dual-pane-expander/widget.css
@@ -4,68 +4,89 @@
     This stylesheet makes beautiful the widget
 */
 
-.hc-dual-pane-expander >.container {
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    gap:2.5em;
-    padding-top:4em;
-    padding-bottom:4em;
-    font-size:clamp(0.75em, 1.75em, 4vw);
+.hc-dual-pane-expander>.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2.5em;
+    padding-top: 4em;
+    padding-bottom: 4em;
+    font-size: clamp(0.75em, 1.75em, 4vw);
     background-color: #eef0e7;
 }
-.hc-dual-pane-expander >.container >.title{
-    font-size:1.95em;
-    font-family:k2dExtraBold;
+
+.hc-dual-pane-expander>.container>.title {
+    font-size: 1.95em;
+    font-family: k2dExtraBold;
 }
 
-.hc-dual-pane-expander >.container >.main{
-    width:clamp(200px, 900px, 100vw - 2em);
-    background-color:#F8F7E8;
-    padding:0.5em;
-    padding-top:1.5em;
-    padding-bottom:1.5em;
-    gap:clamp(0.5em, 1em, 5vw);
-    display:grid;
+.hc-dual-pane-expander>.container>.main {
+    width: clamp(200px, 900px, 100vw - 2em);
+    background-color: #F8F7E8;
+    padding: 0.5em;
+    padding-top: 1.5em;
+    padding-bottom: 1.5em;
+    gap: clamp(0.5em, 1em, 5vw);
+    display: grid;
     grid-template-columns: 0.3fr 0.7fr;
     /* align-items:center; */
-    grid-auto-flow:column;
+    grid-auto-flow: column;
     position: relative;
 
 }
-.hc-dual-pane-expander >.container >.main:after{
-    content:'';
-    position:absolute;
-    width:100%;
-    height:100%;
-    background-image:url('/$/shared/static/logo.png');
-    background-size:contain;
-    background-position:80% 20%;
-    opacity:0.05;
-    pointer-events:none;
-    background-repeat:no-repeat;
-}
 
-.hc-dual-pane-expander >.container >.main >:nth-child(even){
-    position: relative;
-    padding-left:clamp(0.25em, 1em, 0.75vw);
-}
-.hc-dual-pane-expander >.container >.main >:nth-child(even):before{
-    content:'';
+.hc-dual-pane-expander>.container>.main:after {
+    content: '';
     position: absolute;
-    width:0.0625em;
-    height:calc(100% - 0.5em);
-    top:0.25em;
-    border-radius:0625em;
-    background-color:black;
+    width: 100%;
+    height: 100%;
+    background-image: url('/$/shared/static/logo.png');
+    background-size: contain;
+    background-position: 80% 20%;
+    opacity: 0.05;
+    pointer-events: none;
+    background-repeat: no-repeat;
+}
+
+.hc-dual-pane-expander>.container>.main>:nth-child(even) {
+    position: relative;
+    padding-left: clamp(0.25em, 1em, 0.75vw);
+}
+
+.hc-dual-pane-expander>.container>.main>:nth-child(even):before {
+    content: '';
+    position: absolute;
+    width: 0.0625em;
+    height: calc(100% - 0.5em);
+    top: 0.25em;
+    border-radius: 0625em;
+    background-color: black;
     left: clamp(-0.25em, -1em, -0.75vw);
 }
-.hc-dual-pane-expander >.container >.main >*{
-    height:100%;
+
+.hc-dual-pane-expander>.container>.main>* {
+    height: 100%;
 }
 
-.hc-dual-pane-expander >.container >.main >.left >.options{
-    display:flex;
-    flex-direction:column;
-    gap:2em;
+.hc-dual-pane-expander>.container>.main>.left>.options {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
+
+
+.hc-dual-pane-expander:is(.content-switch-state-1, .content-switch-state-2)>.container {
+    pointer-events: none;
+}
+
+.hc-dual-pane-expander.content-switch-state-1>.container>.main>.right>.screen {
+    transform: scale(0.8) translateY(25%);
+    transition: 0.25s 0.125s transform, 0s filter;
+    filter: blur(1em) grayscale(100%);
+}
+
+.hc-dual-pane-expander.content-switch-state-2>.container>.main>.right>.screen {
+    transform: scale(1) translateY(0%);
+    transition: 0.25s;
+    filter: blur(0px);
 }
