--- a/lib/widget/loading-action.css
+++ b/lib/widget/loading-action.css
@@ -14,16 +14,20 @@
     background-color: rgba(255, 255, 255, 0.6);
     font-size: 0.8em;
     z-index: 1;
+    --target-width: max(var(--hc-htmlhc-loading-action-errored-target-width), 250px);
+    width: var(--target-width);
 }
 
 .hc-htmlhc-loading-action-error-ui::before {
     content: '';
-    width: 100%;
-    height: 100%;
+    width: calc(100% + 2em);
+    height: calc(100% + 2em);
     z-index: -1;
     background-color: red;
     opacity: 0.5;
     position: absolute;
+    left: -1em;
+    top: -1em;
 }
 
 .hc-htmlhc-loading-action-error-ui>.container {
@@ -31,8 +35,8 @@
     justify-content: center;
     align-items: center;
     --spacing: 0.35em;
-    --icon-size: clamp(0.5em, 4em, var(--hc-htmlhc-loading-action-errored-target-width) - 5.75em);
-    width: clamp(3em, calc(var(--hc-htmlhc-loading-action-errored-target-width) - 1em - 25%), 400px);
+    --icon-size: clamp(0.5em, 4em, var(--target-width) - 5.75em);
+    width: clamp(3em, calc(var(--width) - 1em - 25%), 400px);
     max-height: calc(100% - 0.25em);
     box-shadow: 0px 0px 0.35em #cde1e7;
     border-radius: 0.75em;
@@ -66,7 +70,7 @@
 
 
 .hc-htmlhc-loading-action-error-ui>.container>.main>.info {
-    max-width: clamp(100px, var(--hc-htmlhc-loading-action-errored-target-width) - 1em, 100% - 2em);
+    max-width: clamp(100px, var(--target-width) - 1em, 100% - 2em);
     overflow: hidden;
     text-overflow: ellipsis;
     max-height: calc(var(--hc-htmlhc-loading-action-errored-target-height) - 5em);
