--- a/widgets/generic-listings/widgets/listings/widget.css
+++ b/widgets/generic-listings/widgets/listings/widget.css
@@ -7,8 +7,8 @@
 .hc-generic-listings-main>.container {
     max-height: 20%;
     width: 100%;
-    border-collapse:collapse;
-    table-layout:fixed;
+    border-collapse: collapse;
+    table-layout: fixed;
 }
 
 
@@ -16,7 +16,8 @@
     font-size: 1.25em;
     background-color: rgba(255, 255, 255, 0.932);
     position: sticky;
-    top: var(--dynamic-headers-sticky-top, 3.58em); /** TODO: Base the calculations of the top on the height of the top actions, using JavaScript*/
+    top: var(--dynamic-headers-sticky-top, 3.58em);
+    /** TODO: Base the calculations of the top on the height of the top actions, using JavaScript*/
     z-index: 1;
 }
 
@@ -36,7 +37,7 @@
 
 .hc-generic-listings-main .container td:first-child {
     padding-left: 0.75em;
-    width:4em;
+    width: 4em;
 }
 
 
@@ -57,12 +58,13 @@
 .hc-generic-listings-main .container>tbody td {
     padding-top: 0.75em;
     padding-bottom: 0.75em;
-    max-width:calc(100% - 0.25em);
+    max-width: calc(100% - 0.25em);
 }
 
 
 .hc-generic-listings-main>.container tbody>tr {
     transition: 0.25s 0.125s;
+    font-family: blogger;
 }
 
 .hc-generic-listings-main>.container tbody>tr:hover {
