--- a/lib/fonts/fonts.css
+++ b/lib/fonts/fonts.css
@@ -48,7 +48,7 @@
 }
 @font-face{
 	font-family:masterly;
-	src:url('res/Masterly Bold.otf');
+	src:url('res/Masterly-Bold.otf');
 }
 @font-face{
 	font-family:aaargh;
