--- a/widgets/dual-pane-expander/widget.css
+++ b/widgets/dual-pane-expander/widget.css
@@ -21,7 +21,7 @@
 }
 
 .hc-dual-pane-expander>.container>.main {
-    width: clamp(200px, 900px, 100vw - 2em);
+    width: clamp(200px, var(--max-content-width, 900px), 100vw - 2em);
     background-color: #F8F7E8;
     padding: 0.5em;
     padding-top: 1.5em;
@@ -72,6 +72,11 @@
     display: flex;
     flex-direction: column;
     gap: 2em;
+}
+
+.hc-dual-pane-expander>.container>.main>.right {
+    min-height: var(--min-height);
+
 }
 
 
