--- a/widgets/simple-tree/generation/item.css
+++ b/widgets/simple-tree/generation/item.css
@@ -37,7 +37,7 @@
     border: 0.125em solid currentColor;
 }
 
-.hc-simple-tree-generation-item>.container>.image>img {
+.hc-simple-tree-generation-item>.container>.image>:is(img, svg) {
     width: 100%;
     height: 100%;
     object-fit: contain;
