--- a/widgets/fileUpload/upload.css
+++ b/widgets/fileUpload/upload.css
@@ -15,7 +15,7 @@ This widget allows users to upload files, especially images to the unique file u
 /** The section where we have the label and the tiny image **/
 .hc-uniqueFileUpload>.container>.main {
     display: flex;
-    gap: 0.5em;
+    gap: 0.25em;
     box-shadow: 0px 0px 12px rgb(214, 214, 217);
     border-radius: 6px;
     padding: 0.25em;
@@ -27,7 +27,8 @@ This widget allows users to upload files, especially images to the unique file u
     word-wrap: break-word;
     position: relative;
     flex-grow: 1;
-    max-width: 100%;
+    /** We need a max width, that allows a 1.5em padding, if and only if the --actions-width property has a non-zero value */
+    max-width: calc(100% - var(--actions-width, 0%) - clamp(0.2 * var(--actions-width, 0px), 1.5em, var(--actions-width, 0px)));
     z-index: 1;
     justify-content: space-between;
 }
@@ -79,7 +80,6 @@ This widget allows users to upload files, especially images to the unique file u
     pointer-events: none;
     max-width: 0px;
     transition: 0.75s 0.125s;
-    padding-left: 1.25em;
     font-size: 0em;
 }
 
@@ -96,7 +96,7 @@ This widget allows users to upload files, especially images to the unique file u
 .hc-uniqueFileUpload.hasFile>.container>.actions {
     opacity: 1;
     pointer-events: all;
-    max-width: 300px;
+    max-width: calc(clamp(100px, 300px, 100%) - 1.5em);
     position: relative;
     font-size: 0.75em;
 }
